--- a/sass/components/_sidebar.scss
+++ b/sass/components/_sidebar.scss
@@ -21,6 +21,7 @@
   height: 467px;
   margin-right: -1px;
   border: 1px solid black;
+  overflow: hidden;
 
   .sidebar-header h2 {
     position: absolute;
